[b][color=orange]v4.18[/color], 15.05.2019[/b][list]
[*]Added a shield icon to Nameplate Castbar for non interruptible casts.
[*]Added an Advanced Merchant Frame (for Vendors). Credits S&L
[*]Attempt to prevent a nil error in itemLevel.
[*]Added an GCD spark below the Player UnitFrames.
[*]Added a Call to Arms Alert.
[*]Added right click functionality to my MerathilisUI Panels to temp hide the Middle Datatext.
[*]Added a RaidCD Module. Credits Klix.
[*]Added RaiderIO Styling support.[/list]

[b][color=orange]v4.17[/color], 22.04.2019[/b][list]
[*]Add some hidden alerts. Muhahaha.
[*]Updateded options for Minimap Buttons.
[*]Added incompatibility popups for ElvUI_WindTools & ElvUI_LivvenUI.[/list]

[b][color=orange]v4.16a[/color], 19.04.2019[/b][list]
[*]Fix lua errors in AutoButton. >.>[/list]

[b][color=orange]v4.16[/color], 19.04.2019[/b][list]
[*]Rename the movers for AutoButtons.
[*]Added Masque support for the AutoButtons.
[*]Rename Bindingtext for AutoButtons.
[*]Override ElvUI's min scale for Aura's.
[*]Enable Crucible of the Storm in Progress.[/list]

[b][color=orange]v4.15a[/color], 14.04.2019[/b][list]
[b]Fixed a lua error. >.>[/list]

[b][color=orange]v4.15[/color], 14.04.2019[/b][list]
[*]Added an Emoticon Frame to the chat.
[*]Fixed some lua errors if you use Dual Profiles.
[*]Added Target Name to the ElvUI Nameplate Castbars.
[*]Added a Talent Manager, where you can save different presets.
[*]Added back my chatBar. Disabled by default.
[*]Added Raid Progress Info to the Tooltip (hold shift).[/list]

[b][color=orange]v4.14[/color], 07.04.2019[/b][list]
[*]Prevent a lua error in Reminder Module.
[*]Alot of more Nameplate settings in my install.
[*]Update the appearance for my FlightPoints frame.
[*]Added Azerite Item Tooltip back.
[*]Minor tweaks to Unitframe install.
[*]Add Guildbest Frame on the LFG Frame > Mythic Keystones.
[*]Chinese Locals from Simon@ciki <3.[/list]

[b][color=orange]v4.13[/color], 12.03.2019[/b][list]