@@ -1,3 +1,11 @@
+** v4.19 18.05.2019**
+* Code improvements for Notifications.
+* Disabled Call To Arms alert by default.
+* Take account to the new ElvUI locales.
+* Removed NSCT & CombatFeedBack.
+* Removed a function from chat, which will prevent the Chat Editbox to flash.
+* Overhaul my media section. I hope this will prevent some lua errors.
+
 ** v4.18 15.05.2019**
 * Added a shield icon to Nameplate Castbar for non interruptible casts.
 * Added an Advanced Merchant Frame (for Vendors). Credits S&L
