@@ -1,3 +1,11 @@
+[b][color=orange]v4.19[/color], 18.05.2019[/b][list]
+[*]Code improvements for Notifications.
+[*]Disabled Call To Arms alert by default.
+[*]Take account to the new ElvUI locales.
+[*]Removed NSCT & CombatFeedBack.
+[*]Removed a function from chat, which will prevent the Chat Editbox to flash.
+[*]Overhaul my media section. I hope this will prevent some lua errors.[/list]
+
 [b][color=orange]v4.18[/color], 15.05.2019[/b][list]
 [*]Added a shield icon to Nameplate Castbar for non interruptible casts.
 [*]Added an Advanced Merchant Frame (for Vendors). Credits S&L
